--- a/index.html
+++ b/index.html
@@ -4,6 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
+    <style>
+      :root{--red:#d93025}
+      html,body{height:100%}
+      body{
+        font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+        background: linear-gradient(180deg,#f3f3f3 0%,#e9e9e9 100%);
+        color:#1b1b1b;
+        margin:0;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        -webkit-font-smoothing:antialiased;
+        -moz-osx-font-smoothing:grayscale;
+      }
+
+      .app-card{
+        width:min(640px,92%);
+        background:linear-gradient(180deg,#ffffff 0%,#f7f7f7 100%);
+        border-radius:16px;
+        padding:2.5rem 2rem;
+        box-shadow:0 10px 30px rgba(0,0,0,0.08), inset 0 1px 0 rgba(255,255,255,0.6);
+        text-align:center;
+      }
+
+      h1{margin:0 0 1rem;font-size:1.75rem}
+      p{margin-top:1rem;color:#444}
+
+      .skeu-btn{
+        --bg-top:#ff6b61;
+        --bg-bot:var(--red);
+        background:linear-gradient(180deg,var(--bg-top) 0%,var(--bg-bot) 100%);
+        color:#fff;
+        font-size:1.25rem;
+        padding:1rem 1.75rem;
+        border-radius:14px;
+        border:1px solid rgba(0,0,0,0.12);
+        box-shadow:0 18px 30px rgba(217,48,37,0.14), inset 0 6px 14px rgba(255,255,255,0.35), inset 0 -8px 18px rgba(0,0,0,0.12);
+        cursor:pointer;
+        transition:transform .12s ease, box-shadow .12s ease;
+        -webkit-tap-highlight-color:transparent;
+      }
+
+      .skeu-btn:hover{transform:translateY(-3px);box-shadow:0 24px 40px rgba(217,48,37,0.18)}
+      .skeu-btn:active{transform:translateY(1px);box-shadow:0 8px 16px rgba(0,0,0,0.18)}
+      .skeu-btn:focus{outline:3px solid rgba(255,107,97,0.18);outline-offset:3px}
+
+    </style>
   </head>
   <body>
     <div id="root"></div>
